# DreamAlpha_AiForBharat_vidhyaSetu

./: Project_Report.md  README.md
vidhyaSetu/: .gitignore  README-QuickStart.md  README.md  zip_project.py
vidhyaSetu/backend/: package_lambda.py  pyproject.toml  requirements.txt
vidhyaSetu/backend/app/: bedrock_chat_client.py  bedrock_client.py  dynamo_client.py  groq_client.py  llm_cache.json  main.py  schemas.py
vidhyaSetu/frontend/: amplify.yml  build_log.txt  package-lock.json  package.json  package_frontend.py
vidhyaSetu/frontend/public/: index.html
vidhyaSetu/frontend/src/: App.tsx  index.css  index.tsx
vidhyaSetu/frontend/src/components/: AppLayout.tsx  ChatBot.tsx  StudentProfileModal.tsx  SubjectCreator.tsx
vidhyaSetu/frontend/src/contexts/: AuthContext.tsx
vidhyaSetu/frontend/src/lib/: supabase.ts
vidhyaSetu/frontend/src/pages/: AIRoadmapPage.tsx  ActivatePathHub.tsx  Analytics.tsx  AuthCallback.tsx  AuthPage.tsx  CodingPlayground.tsx  LandingPage.tsx  OTPPage.tsx  PricingPage.tsx  ResultsPage.tsx  SettingsPage.tsx  StudentDashboard.tsx  TestPage.tsx
vidhyaSetu/frontend/src/services/: api.ts
